--- a/drf_ci-cd/.github/workflows/main.yml
+++ b/drf_ci-cd/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
             cd /home/ubuntu/app/drf_ci-cd
             git pull origin main
 
+            cd /home/ubuntu/app/drf_ci-cd/drf_test
+            
             echo "SECRET_KEY=\"${{ secrets.SECRET_KEY }}\"" > .env
             echo "DEBUG='${{ secrets.DEBUG }}'" >> .env
 
